deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-django-forward-auth
  labels:
    app: traefik-django-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-django-forward-auth
  template:
    metadata:
      labels:
        app: traefik-django-forward-auth
    spec:
      containers:
        - image: gabrielmilan/traefik-django-forward-auth:v0.0.5
          name: traefik-django-forward-auth
          ports:
            - containerPort: 80
              protocol: TCP
